--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,14 +13,14 @@
   <a href="#content" class="skip-link">Go to content</a>
   <nav>
     <div class="inner-width">
-      <a href="#" class="brand-logo">Rizta</a>
+      <a href="./index.html" class="brand-logo">Rizta</a>
       <button class="hamburger-button" id="hamburger-button">
         <span></span>
         <span></span>
         <span></span>
       </button>
       <div class="navbar-menu" id="navbar-menu">
-        <a href="#">Home</a>
+        <a href="./index.html">Home</a>
         <a href="#">Favorite</a>
         <a href="#">Contact Us</a>
         <a href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/" target="_blank">About Us</a>
