--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
@@ -14,6 +15,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 html {
@@ -21,7 +23,7 @@ html {
 }
 
 ::selection {
-  background-color: #48dbfb77;
+  background-color: #acc1c577;
 }
 
 ::-webkit-scrollbar {
@@ -34,8 +36,7 @@ html {
 }
 
 body {
-  padding-top: 65px;
-  /* overflow: hidden; */
+  padding-top: 60px;
 }
 
 .inner-width {
@@ -106,7 +107,7 @@ body {
 
 /** NAVBAR */
 nav {
-  height: 65px;
+  height: 60px;
   position: fixed;
   left: 0;
   right: 0;
@@ -191,7 +192,7 @@ nav .navbar-menu {
   top: 0;
   right: -100%;
   min-height: 100vh;
-  width: calc(100% - 18px);
+  width: calc(100% - 100px);
 
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
   display: flex;
@@ -207,11 +208,11 @@ nav .navbar-menu.active {
 }
 
 nav .navbar-menu a {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-family: 'Raleway', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
 
-  padding: 0 12px;
+  padding: 22px 12px;
   margin: 12px 12px;
   position: relative;
 
@@ -224,7 +225,7 @@ nav .navbar-menu a::after {
   width: 100%;
   height: 1.5px;
   left: 0;
-  bottom: -50%;
+  bottom: -20%;
   background-color: #aaaaaa22;
 }
 
@@ -236,7 +237,7 @@ nav .navbar-menu a:hover {
 
 /** AWAL JUMBOTRON */
 header {
-  min-height: calc(100vh - 65px);
+  min-height: calc(100vh - 60px);
 
   background-image: url('../public/images/heros/hero-image_4.jpg');
   background-size: cover;
@@ -303,17 +304,18 @@ header .navigation a:hover {
 }
 
 header .navigation::after {
-  content: "v";
+  content: "˅";
   position: absolute;
   color: azure;
   font-weight: 900;
-  top: 140%;
+  font-size: 1.5rem;
+  top: 150%;
   animation: floating 2s infinite ease-in-out;
 }
 
 @keyframes floating {
   50% {
-    transform: translateY(-15px);
+    transform: translateY(-20px);
   }
 }
 
@@ -321,7 +323,7 @@ header .navigation::after {
 
 
 /** AWAL MAIN */
-main section {
+main .inner-width {
   padding-top: 70px;
 
 }
@@ -335,14 +337,25 @@ main .content .card-heros {
 }
 
 main .content .card-heros .card {
-  border-radius: 8px;
+  border-radius: 4px;
   list-style: none;
 
   box-shadow: 0 0 6px rgba(0, 0, 0, .6);
-  background-color: #aad8d3;
+  /* background-color: #1cb9aa; */
+  /* color: white; */
+  cursor: pointer;
+
+  transition: .15s ease-in-out;
+}
+
+main .content .card-heros .card:hover {
+  transform: scale(1.015);
+  filter: brightness(1.025);
 }
 
 main .content .card-heros .card-avatar {
+  border-radius: 4px 4px 0 0;
+  max-height: 230px;
   overflow: hidden;
   position: relative;
 }
@@ -361,8 +374,8 @@ main .content .card-heros .caption-img {
   z-index: 1;
 }
 
-main .content .card-heros .caption-img span:last-child,
-main .content .card-heros .caption-img span:first-child {
+main .content .card-heros .caption-img .rating,
+main .content .card-heros .caption-img .city {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -376,28 +389,27 @@ main .content .card-heros .caption-img span:first-child {
   align-items: center;
 }
 
-main .content .card-heros .caption-img span:first-child {
+main .content .card-heros .caption-img .rating {
   transform: translateY(-99.9%);
 }
 
-main .content .card-heros .caption-img span:first-child i {
-  margin-left: -2px;
+main .content .card-heros .caption-img .rating i {
+  margin-left: 1.5px;
 }
 
-
-main .content .card-heros .caption-img span:first-child i,
-main .content .card-heros .caption-img span:last-child i {
+main .content .card-heros .caption-img .rating i,
+main .content .card-heros .caption-img .city i {
   margin-right: 8px;
 }
 
-main .content .card-heros .caption-img span:last-child {
+main .content .card-heros .caption-img .city {
   padding-right: 16px;
   padding-left: 16px;
 }
 
 
 main .content .card-heros .card-image {
-  border-radius: 8px 8px 0 0;
+  border-radius: 4px 4px 0 0;
   display: block;
   width: 100%;
 
@@ -405,7 +417,7 @@ main .content .card-heros .card-image {
 }
 
 main .content .card-heros .card-image:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 main .content .card-heros .card-body {
@@ -418,15 +430,62 @@ main .content .card-heros .card-body .id {
   color: #333333aa;
 }
 
-main .content .card-heros .card-body .name {
-  font-size: 1.2rem;
+main .content .card-heros .card-body .name a {
+  font-size: 1.35rem;
   font-weight: 700;
+  text-decoration: none;
+
+  color: black;
+  transition: .15s linear;
+}
+
+main .content .card-heros .card-body .name a:hover {
+  color: #00000077;
+  text-decoration: underline;
 }
 
 main .content .card-heros .card-body .description {
-  font-size: .825rem;
-  font-weight: 300;
-  text-align: justify;
+  font-size: 1rem;
+  font-weight: 400;
+
+  user-select: none;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+main .content .detail-container {
+  font-family: 'Poppins', sans-serif;
+
+  width: 90%;
+  margin: 0 auto;
+}
+
+main .content .restaurant-name {
+  font-size: calc(4vh - 1vw);
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+main .content img {
+  display: block;
+  width: 100%;
+  line-height: 0;
+  margin: 0 auto;
+  border-radius: 4px;
+  box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.25);
+}
+
+main .detail-container .restaurant-info {
+  margin: .8rem 0 .5rem;
+}
+
+main .detail-container .sub-info-title {
+  font-size: 1.25rem;
 }
 
 /** AKHIR MAIN */
@@ -508,94 +567,3 @@ footer .sosmed a:hover {
 }
 
 /** AKHIR FOOTER */
-
-/* TABLET */
-@media screen and (min-width: 768px) {
-
-  /** AWAL NAV */
-  nav .brand-logo {
-    margin: 0 36px;
-  }
-
-  nav .navbar-menu {
-    width: calc(100% - 100px);
-  }
-
-  /** AKHIR NAV */
-
-  /** AWAL FOOTER */
-  footer {
-    min-height: calc(25vw - 5vw);
-    padding: 5vh 0;
-  }
-
-  footer .copyright {
-    font-size: 1.3rem;
-    margin-bottom: 16px;
-
-  }
-
-  footer .sosmed a {
-    font-size: 1.7rem;
-    margin: 0 16px;
-  }
-
-  /** AKHIR FOOTER */
-}
-
-
-/* Laptop 1024px */
-@media screen and (min-width: 1024px) {
-
-  /** NAVBAR */
-  nav .hamburger-button {
-    display: none;
-  }
-
-  nav .navbar-menu {
-    min-height: auto;
-    width: auto;
-    position: static;
-    display: block;
-    padding: 0;
-    margin: 0;
-
-    background: none;
-    box-shadow: none;
-  }
-
-  nav .navbar-menu a {
-    display: inline-block;
-    font-family: 'Kaushan Script', cursive;
-    padding: 4px 36px;
-  }
-
-  nav .navbar-menu a:hover {
-    background-color: #eeeeee33;
-  }
-
-  nav .navbar-menu a::after {
-    display: none;
-  }
-
-}
-
-/* Screen 4K */
-@media screen and (min-width: 2560px) {
-
-  /** AWAL FOOTER */
-  footer {
-    padding: 5vw 0;
-  }
-
-  footer .copyright {
-    font-size: 1.8rem;
-  }
-
-  footer .sosmed a {
-    font-size: 2rem;
-
-  }
-
-  /** AKHIR FOOTER */
-}
